<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity">
    <ImageView
        android:id="@+id/imageView_logo_reg_activity"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        app:layout_constraintBottom_toTopOf="@+id/button_continue_registration_reg_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo_reg_activity">

        <EditText
            android:id="@+id/editText_name_reg_activity"
            android:layout_width="2in"
            android:layout_height="20pt"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:layout_marginBottom="40dp"
            />
        <EditText
            android:id="@+id/editText_surname_reg_activity"
            android:layout_width="2in"
            android:layout_height="20pt"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:layout_marginBottom="40dp"
            />

        <EditText
            android:id="@+id/editText_email_reg_activity"
            android:layout_width="2in"
            android:layout_height="20pt"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_continue_registration_reg_activity"
        android:layout_width="2in"
        android:layout_height="30pt"
        android:layout_marginBottom="100dp"
        android:text="@string/continue_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_already_have_account_reg_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_continue_registration_reg_activity" />
</androidx.constraintlayout.widget.ConstraintLayout>