<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity2">

    <ImageView
        android:id="@+id/imageView_logo_reg_activity2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_create_acc_reg_activity2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo_reg_activity2">

        <EditText
            android:id="@+id/editText_password_reg_activity2"
            android:layout_width="2in"
            android:layout_height="20pt"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editText_repeat_password_reg_activity2"
            android:layout_width="2in"
            android:layout_height="20pt"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_create_acc_reg_activity2"
        android:layout_width="2in"
        android:layout_height="30pt"
        android:layout_marginBottom="100dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_back_reg_activity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_acc_reg_activity2" />

    <TextView
        android:id="@+id/textView_already_have_account_reg_activity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_back_reg_activity2" />

    <ProgressBar
        android:id="@+id/progressBar_reg_activity2"
        style="?android:attr/progressBarStyle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>